[gd_scene load_steps=9 format=1]

[ext_resource path="res://OptionsScene/options.gd" type="Script" id=1]
[ext_resource path="res://OptionsScene/back_grid.png" type="Texture" id=2]
[ext_resource path="res://OptionsScene/title.png" type="Texture" id=3]
[ext_resource path="res://OptionsScene/button_exit1.png" type="Texture" id=4]
[ext_resource path="res://OptionsScene/button_exit2.png" type="Texture" id=5]
[ext_resource path="res://OptionsScene/off.png" type="Texture" id=6]
[ext_resource path="res://OptionsScene/on.png" type="Texture" id=7]
[ext_resource path="res://Font/font_32.fnt" type="Font" id=8]

[node name="Options" type="Node"]

script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"Script" }

[node name="TextureFrame" type="TextureFrame" parent="."]

margin/right = 1280.0
margin/bottom = 720.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
texture = ExtResource( 2 )

[node name="title" type="TextureFrame" parent="."]

margin/left = 385.0
margin/top = 75.0
margin/right = 1118.0
margin/bottom = 147.0
rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
texture = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="."]

margin/left = 990.0
margin/top = 610.0
margin/right = 1190.0
margin/bottom = 680.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
params/scale = Vector2( 0.4, 0.4 )

[node name="MusicButton" type="CheckButton" parent="."]

margin/left = 350.0
margin/top = 200.0
margin/right = 650.0
margin/bottom = 239.0
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_icons/off = ExtResource( 6 )
custom_icons/on = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
text = "Music"
flat = false
align = 0

[node name="SoundFXButton" type="CheckButton" parent="."]

margin/left = 350.0
margin/top = 300.0
margin/right = 650.0
margin/bottom = 339.0
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_icons/off = ExtResource( 6 )
custom_icons/on = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
text = "Sound FX"
flat = false
align = 0

[node name="FullscreenButton" type="CheckButton" parent="."]

margin/left = 350.0
margin/top = 400.0
margin/right = 650.0
margin/bottom = 439.0
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_icons/off = ExtResource( 6 )
custom_icons/on = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
text = "Fullscreen"
flat = false
align = 0

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]

[connection signal="toggled" from="MusicButton" to="." method="_on_MusicButton_toggled"]

[connection signal="toggled" from="SoundFXButton" to="." method="_on_SoundFXButton_toggled"]

[connection signal="toggled" from="FullscreenButton" to="." method="_on_FullscreenButton_toggled"]


